small enhancements fixed bug so the list of Experiments correctly displays write and view permission expanded netgraph to also display related tags and owners. Both Datasets and Tags link to the corresponding page changed tree-view to use jsTree which looks a bit smoother and shows more clearly which items have been expanded. downside of jsTree being that <li> elements can't contain html so only one link can be placed inside them and no markup is possible AND no automatic wrapping of text is enabled as it seems to destroy the tree-view. Therefore horizontal scrollbar was added... Tags and Related Datasets also use jsTree now, potentially allowing tags to be displayed with linked parent tags changed user icon to user-md

--- a/styles/main.css
+++ b/styles/main.css
@@ -231,7 +231,8 @@ footer a:hover{
 div.metadata {
   float: left;
   clear: left;
-  overflow: hidden;
+  overflow-x: auto;
+  overflow-y: hidden;
   width: 120px;
   min-height: calc(100vh - 95px);
   max-height: calc(100vh - 95px);
@@ -248,10 +249,16 @@ div.metadata.fw {
   width: 30%;
   overflow-x: hidden;
   overflow-y: auto;
+  border-right-width: 0px;
+}
+div.metadata.fw:hover {
+  width: 30%;
+  overflow-x: scroll;
+  overflow-y: auto;
 }
 div.metadata:hover {
   width: 30%;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: auto;
   min-height: calc(100vh - 95px);
   -webkit-transition-duration: 0.4s;
@@ -275,6 +282,10 @@ div.files {
   clear: right;
   padding-top: 5px;
   padding-left: 5px;
+  min-height: calc(100vh - 95px);
+  border-left-width: 3px;
+  border-left-color: #323d43;
+  border-left-style: solid;
 }
 .btn {
   border: 0px;
@@ -464,6 +475,10 @@ div .floatspace {
 	color: #ffffff;
 }
 
+.treeli li{
+	word-wrap: break-word;
+	white-space: normal;
+}
 
 div.container {
   float: left;
